adding functiolaity to till wininum after script done